wip: update folder structure

--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -16,6 +16,7 @@
     "paths": {
       "@/*": ["./*"],
       "@lib/*": ["./lib/*"],
+      "@modules/*": ["./modules/*"],
       "@routes/*": ["./routes/*"],
       "@controllers/*": ["./controllers/*"],
       "@middleware/*": ["./middleware/*"],
