--- a/apps/api/tsconfig.paths.json
+++ b/apps/api/tsconfig.paths.json
@@ -4,6 +4,7 @@
     "paths": {
       "@/*": ["./*"],
       "@lib/*": ["./lib/*"],
+      "@modules/*": ["./modules/*"],
       "@routes/*": ["./routes/*"],
       "@controllers/*": ["./controllers/*"],
       "@middleware/*": ["./middleware/*"],
